--- a/front-end/src/app/moves/moves.html
+++ b/front-end/src/app/moves/moves.html
@@ -1,3 +1,3 @@
-<div class="moves-container">
-  <p><strong>Moves:</strong> {{ count }}</p>
+<div class="text-center bg-purple-900 text-white rounded-xl py-4 px-6 shadow-lg text-xl font-semibold border border-purple-700 transition-all duration-300">
+  <p>Moves: {{ count }}</p>
 </div>
